# pyplier

./: .gitignore  .pdm-python  B_mat.csv  CHANGELOG.md  README.md  Untitled.ipynb  mypy.ini  noxfile.py  plierresb.csv  plierresheldoutgenes.json  plierresu.csv  plierresz.csv  pyproject copy.toml  pyproject.toml  solveU_converting_from_dataframes_to_arrays_df_portion.ipynb
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
src/pyplier/: AUC.py  PLIERRes.py  VarianceExplained.py  __about__.py  __init__.py  auc.py  colSumNorm.py  combinePaths.py  commonRows.py  computeChat.py  copyMat.py  crossVal.py  cross_val.py  datasmooth.py  debug.py  getAUC.py  getCutoff.py  getEnrichmentvals.py  logger.py  logging.py  nameB.py  name_b.py  nonEstimable.py  non_estimable.py  num_pc.py  pathwayFromGMT.py  pathways.py  pinv_ridge.py  plier.py  plierResToMarkers.py  plier_res.py  plotMat.py  plotTopZ.py  plotTopZallPath.py  plotU.py  plotting.py  regression.py  solveU.py  solve_u.py  stubs.py  (+3 more)
tests/: conftest.py  create_plierRes.py  test_AUC.py  test_auc.py  test_colSumNorm.py  test_combinePaths.py  test_combine_paths.py  test_getAUC.py  test_getCutoff.py  test_get_auc.py  test_get_cutoff.py  test_mannwhitneyu_conf_int.py  test_nameB.py  test_name_b.py  test_num_pc.py  test_pathwaysFromGMT.py  test_pathways_from_gmt.py  test_pinv_ridge.py  test_plierRes.py  test_plier_res.py  test_solveU.py  test_solve_u.py
tests/data/: random_matrix.csv
tests/data/AUC/: Untitled.ipynb  auc_test_result.pkl  crossVal_hypothesis.ipynb  labels.csv  values.csv
tests/data/auc/: crossVal_hypothesis.ipynb
tests/data/combinePaths/: bloodCellMarkersIRISDMAP.csv
tests/data/common/: heldOutGenes.csv  plierRes_b.csv  plierRes_cp.csv  plierRes_heldoutgenes.csv  plierRes_summary.csv  plierRes_u.csv  plierRes_uauc.csv  plierRes_up.csv  plierRes_z.csv  plierRes_z1.csv  plierRes_z2.csv  plierresheldoutgenes.json
tests/data/common/previous_data/: plierRes_b.csv
tests/data/crossVal/: data.csv  plierRes_u.csv  plierRes_z.csv
tests/data/crossVal/.ipynb_checkpoints/: plierRes_u-checkpoint.csv
tests/data/getAUC/: aucresults_summary.csv  aucresults_uauc.csv  aucresults_upval.csv  getAUC_b.csv  getAUC_data.csv  getAUC_residual.csv  getAUC_summary.csv  getAUC_summary_from_PLIER.csv  getAUC_u.csv  getAUC_uauc.csv  getAUC_uauc_from_PLIER.csv  getAUC_up.csv  getAUC_up_from_PLIER.csv  getAUC_z.csv
tests/data/mannwhitney_conf_int/: x.csv  y.csv
tests/data/nameB/: plierRes_b_pre-nameB.csv
tests/data/nonEstimatable/: colnames.txt  nonEstimatable_x.csv
tests/data/num_pc/: test_pc_mat_100.csv
tests/data/pinv_ridge/: expected_results.csv  input_matrix.csv  randmat.txt
tests/data/solveU/: Z.csv  beta.csv  inprogress_Z.csv
transcoding_notebooks/: PLIERResults_class.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  VarianceExplained.ipynb  alfa.csv  auc.ipynb  combinePaths.ipynb  commonRows.ipynb  computeChat.ipynb  copyMat.ipynb  crossVal.ipynb  crossVal_debugging.ipynb  datasmooth.ipynb  debugging_crossVal.ipynb  debugging_pinv_ridge.ipynb  decyphering_plotTopZ.ipynb  from_hdf5.ipynb  getAUC.ipynb  getEnrichmentVals.ipynb  hypothesis_how_to_make_a_2dim_array.ipynb  making_plotTopZ_work.ipynb  mat1.csv  mat2.csv  matb.csv  more_getAUC.ipynb  nameB.ipynb  num_pc.ipynb  pinv_ridge.ipynb  plier.ipynb  plierResToMarkers.ipynb  plier_debugging.ipynb  plier_v2.ipynb  plotTopZ.ipynb  plotTopZallPath.ipynb  plotU.ipynb  readGMT.ipynb  (+9 more)
transcoding_notebooks/.ipynb_checkpoints/: crossVal-checkpoint.ipynb  getAUC-checkpoint.ipynb  nameB-checkpoint.ipynb  readGMT-checkpoint.ipynb  update_immunochip_positions-checkpoint.ipynb
