[tool.poetry]
name = "pyplier"
version = "1.8.0"
description = "Python reimplementation of PLIER"
authors = ["milescsmith <mileschristiansmith@gmail.com>"]
license = "MPL2.0"

[tool.poetry.dependencies]
python = ">=3.8.3,<3.11"
numpy = ">=1.26,<1.27"
pandas = "^1.4"
scipy = "^1.7"
statsmodels = "^0.13"
joblib = "^1.1"
rich = "^12.5"
pysmooth = "^1.1.3"
icontract = "^2.6.0"
pylint = "^2.12.2"
tqdm = "^4.62.3"
coloredlogs = "^15.0.1"
typeguard = "^2.13.3"
structlog = "^22.0.0"
seaborn = "^0.12.0"
scikit-learn = "^1.1.1"
glmnet = { git = "https://github.com/replicahq/python-glmnet.git" }
h5py = "^3.7.0"
fastcluster = {version = "^1.2.6", optional = true } #, extras = ["fastcluster", "all"]}
tables = {version = "^3.7.0", optional = true } #, extras = ["hdf5", "all"]}

[tool.poetry.dev-dependencies]
mypy = "flake8"
flake8 = "^5.0.1"
ipykernel = "^6.4.2"
isort = "^5.10.0"
nox = "^2022.0.0"
hypothesis = "^6.24.2"
pytest = "^7.1.2"
nox-poetry = "^1.0.0"
black = {version = ">=22.1", extras = ["all"]}
importlib-resources = { version = "^5.4.0", python = "~3.8" }
icontract-hypothesis = "^1.1.7"
matplotlib = "^3.5.1"
dill = "^0.3.4"
deepdiff = "^5.8.1"
bandit = "^1.7.4"
pytest-cov = "^3.0.0"
vprof = "^0.38"
snakeviz = "^2.1.1"
jupyterlab = "^3.4.6"
coverage = "^6.4.4"

[tool.poetry.extras]
fastcluster = ["fastcluster"]
all = ["fastcluster"]

[tool.isort]
src_paths = ["src", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
