[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "milescsmith", email = "mileschristiansmith@gmail.com"},
]
license = { text = "MPL2.0" }
requires-python = "<3.11,>=3.10"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scipy>=1.13.1",
    "statsmodels>=0.14.2",
    "joblib>=1.4.2",
    "rich>=13.7.1",
    "pysmooth>=1.3.0",
    "icontract>=2.6.6",
    "tqdm>=4.66.4",
    "typeguard>=4.3.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.5.0",
    "python-glmnet>=2.2.2.post2",
    "h5py>=3.11.0",
    "loguru>=0.7.2",
]
name = "pyplier"
version = "1.10.0"
description = "Python reimplementation of PLIER"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "nox>=2024.4.15",
    "hypothesis>=6.103.1",
    "pytest>=8.2.2",
    "icontract-hypothesis>=1.1.7",
    "dill>=0.3.8",
    "deepdiff>=7.0.1",
    "pytest-cov>=5.0.0",
    "coverage>=7.5.3",
    "ruff>=0.4.8",
    "pytest-random-order>=1.1.1",
    "pytest-xdist[psutil]>=3.6.1",
]

[tool.pdm.scripts]
format = "ruff format src/"
lint = "ruff check --fix src/"
test = "nox"
all = {composite = ["format", "lint", "test"]}

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pyplier"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "--import-mode=importlib",
]
typeguard-packages = "pyplier"

[tool.pdm.build]
includes = []

[project.optional-dependencies]
fastcluster = [
    "fastcluster>=1.2.6",
]
