[build-system]
requires = ["pdm-backend", "numpy"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "milescsmith", email = "mileschristiansmith@gmail.com"},
]
license = { text = "MPL2.0" }
requires-python = ">=3.10"
dependencies = [
    "pysmooth>=1.5.0",
    "numpy>=2.0",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "statsmodels>=0.14.4",
    "joblib>=1.4.2",
    "rich>=13.9.4",
    "icontract>=2.7.1",
    "tqdm>=4.66.6",
    "typeguard>=4.4.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.5.2",
    "h5py>=3.12.1",
    "loguru>=0.7.2",
    "python-glmnet @ git+https://github.com/milescsmith/python-glmnet.git@2.5.0",
]
name = "pyplier"
version = "1.12.0"
description = "Python reimplementation of PLIER"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "nox>=2024.10.9",
    "hypothesis>=6.116.0",
    "pytest>=8.3.3",
    "icontract-hypothesis>=1.1.7",
    "dill>=0.3.9",
    "deepdiff>=8.0.1",
    "pytest-cov>=6.0.0",
    "coverage[toml]>=7.6.4",
    "ruff>=0.7.2",
    "pytest-random-order>=1.1.1",
    "pytest-xdist[psutil]>=3.6.1",
    "mypy>=1.13.0",
]

[tool.pdm.scripts]
format = "ruff format src/"
lint = "ruff check --fix src/"
test = "nox"
all = {composite = ["format", "lint", "test"]}

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pyplier"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "--import-mode=importlib",
]
typeguard-packages = "pyplier"

[tool.pdm.build]
includes = []

[project.optional-dependencies]
fastcluster = [
    "fastcluster>=1.2.6",
]
